Add grid and units to html
Also add to main

--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,19 @@
 html {
   font-family: 'Open Sans', sans-serif;
 }
+
+h1 {
+  border-bottom: 1px solid #000;
+}
+
+@media only screen and (min-width: 60em) {
+
+  .pad-l {
+    padding-left: .5rem;
+  }
+
+  .pad-r {
+    padding-right: .5rem;
+  }
+
+}
