--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,15 @@
 
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
+  background-color: #f2f2f2;
 }
 
 h1 {
   border-bottom: 1px solid #000;
+}
+
+.btn {
+
 }
 
 @media only screen and (min-width: 60em) {
